# turtlebot3_red_bucketoids

./: README.md
red_bucketoids_autorace/: CMakeLists.txt  package.xml
red_bucketoids_autorace_camera/: CMakeLists.txt  package.xml  setup.py
red_bucketoids_autorace_camera/calibration/extrinsic_calibration/: projection.yaml
red_bucketoids_autorace_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
red_bucketoids_autorace_camera/launch/: extrinsic_camera_calibration.launch
red_bucketoids_autorace_camera/nodes/: image_compensation  image_projection
red_bucketoids_autorace_core/: CMakeLists.txt  package.xml  setup.py
red_bucketoids_autorace_core/launch/: camera_calibration.launch  construction.launch  detect_lane_calibration.launch  detect_sign_calibration.launch  intersection.launch  level_crossing.launch  parking.launch  red_bucketoids.launch  red_bucketoids_autorace_core.launch  traffic_light.launch  tunnel.launch  turtlebot3_autorace_core.launch  turtlebot3_autorace_mission.launch
red_bucketoids_autorace_core/nodes/: construction_core_node_controller  construction_manager  core_manager  core_node_mission  intersection_core_mode_decider  intersection_core_node_controller  intersection_manager  level_crossing_core_mode_decider  level_crossing_core_node_controller  level_crossing_manager  parking_core_mode_decider  parking_core_node_controller  parking_manager  traffic_light_core_mode_decider  traffic_light_core_node_controller  traffic_light_manager  tunnel_core_node_controller  tunnel_manager
red_bucketoids_autorace_detect/: CMakeLists.txt  package.xml  setup.py
red_bucketoids_autorace_detect/cfg/: DetectLaneParams.cfg  DetectLevelParams.cfg  DetectTrafficLightParams.cfg
red_bucketoids_autorace_detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_level_crossing.launch  detect_parking.launch  detect_sign.launch  detect_traffic_light.launch  detect_tunnel.launch
red_bucketoids_autorace_detect/nodes/: detect_construction  detect_construction_sign  detect_intersection  detect_intersection_sign  detect_lane  detect_level_crossing  detect_level_crossing_sign  detect_parking  detect_parking_sign  detect_traffic_light  detect_tunnel  detect_tunnel_sign
red_bucketoids_autorace_detect/param/lane/: lane.yaml
red_bucketoids_autorace_detect/param/level/: level.yaml
red_bucketoids_autorace_driving/: CMakeLists.txt  package.xml  setup.py
red_bucketoids_autorace_driving/launch/: turtlebot3_autorace_control_lane.launch  turtlebot3_autorace_control_moving.launch  turtlebot3_autorace_control_tunnel.launch
red_bucketoids_autorace_driving/nodes/: control_lane  control_moving
red_bucketoids_autorace_msgs/: CMakeLists.txt  package.xml
