<?xml version="1.0"?>
<package format="2">
  <name>red_bucketoids_autorace</name>
  <version>1.1.0</version>
  <description>
    TurtleBot3 AutoRace 2020 ROS 1 packages (meta package) from team "Red Bucketoids"
  </description>
  <license>MIT</license>
  <author email="maxchup30@gmail.com">Max Chuprov</author>
  <author>Max Chuprov</author>
  <maintainer email="maxchup30@gmail.com">Max Chuprov</maintainer>
  <maintainer email="">Semyon Ilyasov</maintainer>
  <maintainer email="">Roman Derunec</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/AetelFinch/turtlebot3_red_bucketoids</url>
  <url type="bugtracker">https://github.com/AetelFinch/turtlebot3_red_bucketoids/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export><metapackage/></export>
</package>