<?xml version="1.0"?>
<package format="2">
  <name>red_bucketoids_autorace</name>
  <version>1.1.0</version>
  <description>
    TurtleBot3 AutoRace 2020 ROS 1 packages (meta package) from team "Red Bucketoids"
  </description>
  <license>MIT</license>
  <author email="maxchup30@gmail.com">Max Chuprov</author>
  <author>Max Chuprov</author>
  <maintainer email="maxchup30@gmail.com">Max Chuprov</maintainer>
  <maintainer email="s.ilyasov@g.nsu.ru">Semyon Ilyasov</maintainer>
  <maintainer email="r.derunets@g.nsu.ru">Roman Derunets</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/AetelFinch/turtlebot3_red_bucketoids</url>
  <url type="bugtracker">https://github.com/AetelFinch/turtlebot3_red_bucketoids/issues</url>
  <exec_depend>red_bucketoids_autorace_camera</exec_depend>
  <exec_depend>red_bucketoids_autorace_detect</exec_depend>
  <exec_depend>red_bucketoids_autorace_driving</exec_depend>
  <exec_depend>red_bucketoids_autorace_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export><metapackage/></export>
</package>