<?xml version="1.0"?>
<package format="2">
  <name>red_bucketoids_autorace_msgs</name>
  <version>1.1.0</version>
  <description>The turtlebot3_autorace_msgs package
  </description>
  <license>MIT</license>
  <author email="maxchup30@gmail.com">Max Chuprov</author>
  <author>Max Chuprov</author>
  <maintainer email="maxchup30@gmail.com">Max Chuprov</maintainer>
  <maintainer email="s.ilyasov@g.nsu.ru">Semyon Ilyasov</maintainer>
  <maintainer email="r.derunets@g.nsu.ru">Roman Derunets</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/AetelFinch/turtlebot3_red_bucketoids</url>
  <url type="bugtracker">https://github.com/AetelFinch/turtlebot3_red_bucketoids/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
